--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ pluggy==0.13.0
 py==1.8.0
 pycodestyle==2.5.0
 pylint==2.4.3
+pylint-django==2.0.11
+pylint-plugin-utils==0.6
 pyparsing==2.4.2
 pytest==5.2.2
 pytest-django==3.6.0
