--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ attrs==19.3.0
 autopep8==1.4.4
 colorama==0.4.1
 Django==2.2.6
+importlib-metadata==0.23
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.2
+pkg-resources==0.0.0
 pluggy==0.13.0
 py==1.8.0
 pycodestyle==2.5.0
@@ -21,5 +23,7 @@ pytest-django==3.6.0
 pytz==2019.3
 six==1.12.0
 sqlparse==0.3.0
+typed-ast==1.4.0
 wcwidth==0.1.7
 wrapt==1.11.2
+zipp==0.6.0
