--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+asgiref==3.2.3
 astroid==2.3.2
 atomicwrites==1.3.0
 attrs==19.3.0
 autopep8==1.4.4
 colorama==0.4.1
-Django==2.2.6
+Django==3.0
 importlib-metadata==0.23
 isort==4.3.21
 lazy-object-proxy==1.4.3
@@ -14,7 +15,7 @@ pkg-resources==0.0.0
 pluggy==0.13.0
 py==1.8.0
 pycodestyle==2.5.0
-pylint==2.4.3
+pylint==2.4.4
 pylint-django==2.0.11
 pylint-plugin-utils==0.6
 pyparsing==2.4.2
