--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.2
-pkg-resources==0.0.0
+#pkg-resources==0.0.0
 pluggy==0.13.0
 py==1.8.0
 pycodestyle==2.5.0
