--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,8 @@ install:
   - pip install -r requirements.txt
   - pip install coveralls
 
-
 script:
-  - python ./tests.py
+  - python ./meetup/tests.py
 
 after_success:
   - coveralls
