--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install coveralls
+env:
+  - DJANGO_SETTINGS_MODULE=questioner.settings
 
 script:
   - python ./meetup/tests.py
