--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,18 @@ atomicwrites==1.3.0
 attrs==19.3.0
 autopep8==1.4.4
 colorama==0.4.1
+dj-database-url==0.5.0
 Django==3.0
+gunicorn==20.0.4
 importlib-metadata==0.23
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.2
-#pkg-resources==0.0.0
 pluggy==0.13.0
+psycopg2==2.8.4
+psycopg2-binary==2.8.4
 py==1.8.0
 pycodestyle==2.5.0
 pylint==2.4.4
@@ -26,35 +29,6 @@ six==1.12.0
 sqlparse==0.3.0
 typed-ast==1.4.0
 wcwidth==0.1.7
-wrapt==1.11.2
-zipp==0.6.0
-asgiref==3.2.3
-astroid==2.3.2
-atomicwrites==1.3.0
-attrs==19.3.0
-autopep8==1.4.4
-colorama==0.4.1
-Django==3.0
-importlib-metadata==0.23
-isort==4.3.21
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-more-itertools==7.2.0
-packaging==19.2
-pkg-resources==0.0.0
-pluggy==0.13.0
-py==1.8.0
-pycodestyle==2.5.0
-pylint==2.4.4
-pylint-django==2.0.11
-pylint-plugin-utils==0.6
-pyparsing==2.4.2
-pytest==5.2.2
-pytest-django==3.6.0
-pytz==2019.3
-six==1.12.0
-sqlparse==0.3.0
-typed-ast==1.4.0
-wcwidth==0.1.7
+whitenoise==5.0.1
 wrapt==1.11.2
 zipp==0.6.0
