--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ attrs==19.3.0
 autopep8==1.4.4
 colorama==0.4.1
 dj-database-url==0.5.0
-Django==3.0
+Django==3.0.4
 gunicorn==20.0.4
 importlib-metadata==0.23
 isort==4.3.21
@@ -13,6 +13,7 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.2
+pkg-resources==0.0.0
 pluggy==0.13.0
 psycopg2==2.8.4
 psycopg2-binary==2.8.4
@@ -26,7 +27,7 @@ pytest==5.2.2
 pytest-django==3.6.0
 pytz==2019.3
 six==1.12.0
-sqlparse==0.3.0
+sqlparse==0.3.1
 typed-ast==1.4.0
 wcwidth==0.1.7
 whitenoise==5.0.1
